[package]

name = "knock"
version = "0.1.7"
authors = ["Nazarii Sheremet <nazarii.sheremet@gmail.com>"]

description = "Knock is a simple HTTP Client for Rust"
documentation = "https://docs.rs/knock"
repository = "https://github.com/nsheremet/knock"
homepage = "https://github.com/nsheremet/knock"
readme = "README.md"
keywords = ["rust", "http-client"]
license = "MPL-2.0"

[features]
default = ["native-tls"]

[dependencies]
serde_json = "1.0.*"
rand = "0.3"
native-tls = { version = "0.1.4", optional = true }
url = "1.6"
clippy = { version = "0.0.134", optional = true}
